Add "installation instructions"

--- a/README.textile
+++ b/README.textile
@@ -25,6 +25,18 @@ Does three things:
   message by rebase-squashing the modification into the commit that introduced
   the migration, which is probably the polite thing to do anyway.
 
-* If you have a *new untracked migration* (i.e. one you still need to @git add@), prints out a big scary warning message when you commit anything.  This
-  is to catch the case when you commit a bunch of changes but forget to add
-  the migration, then everything breaks when someone else gets the changes.
+* If you have a *new untracked migration* (i.e. one you still need to
+  @git add@), prints out a big scary warning message when you commit anything.
+  This is to catch the case when you commit a bunch of changes but forget to
+  add the migration, then everything breaks when someone else gets the changes.
+
+h2. Installation
+
+<pre>
+<code>
+git clone git://github.com/samstokes/rails_on_git.git
+cp rails_on_git/hooks/* $YOUR_PROJECT_ROOT/.git/hooks
+</code>
+</pre>
+
+(It seems a bit grandiose to call that an installation procedure really...)
